--- a/influencer/templates/influencer/profile_badge.html
+++ b/influencer/templates/influencer/profile_badge.html
@@ -1,6 +1,7 @@
 {% extends base_template %}
 {% load brand_tags %}
 {% load tz %}
+{% load static %}
 {% block main %}
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <div class="container">
@@ -51,7 +52,8 @@
                 </div>
                 <div class="mdl-cell mdl-cell--10-col">
                     <div class="inner-content">
-                        {{ fb_permissions.ig_follower_count }} Followers&nbsp;&nbsp;<i id="follower-count-info" class="material-icons info-icon">info</i>
+                        {{ fb_permissions.ig_follower_count }} Followers&nbsp;&nbsp;<i id="follower-count-info"
+                            class="material-icons info-icon">info</i>
                     </div>
                 </div>
                 <div class="mdl-cell mdl-cell--2-col">
@@ -77,11 +79,11 @@
                             <i class="material-icons">analytics</i>
                             &nbsp;&nbsp;Analytics
                         </a>
-                        <a href="{% url 'influencer:profile_endorsements' %}" class="mdl-tabs__tab is-active">
+                        <a href="{% url 'influencer:profile_endorsements' %}" class="mdl-tabs__tab">
                             <i class="material-icons">dynamic_feed</i>
                             &nbsp;&nbsp;Endorsements
                         </a>
-                        <a href="{% url 'influencer:profile_badge' %}" class="mdl-tabs__tab">
+                        <a href="{% url 'influencer:profile_badge' %}" class="mdl-tabs__tab is-active">
                             <i class="material-icons">military_tech</i>
                             &nbsp;&nbsp;Badge
                         </a>
@@ -91,17 +93,73 @@
                             <i class="material-icons">analytics</i>
                             &nbsp;&nbsp;Analytics
                         </a>
-                        <a href="{% url 'brand:influencer_endorsements' encoded_pk %}" class="mdl-tabs__tab is-active">
+                        <a href="{% url 'brand:influencer_endorsements' encoded_pk %}" class="mdl-tabs__tab">
                             <i class="material-icons">dynamic_feed</i>
                             &nbsp;&nbsp;Endorsements
                         </a>
-                        <a href="{% url 'brand:influencer_badge' encoded_pk %}" class="mdl-tabs__tab">
+                        <a href="{% url 'brand:influencer_badge' encoded_pk %}" class="mdl-tabs__tab is-active">
                             <i class="material-icons">military_tech</i>
                             &nbsp;&nbsp;Badge
                         </a>
                     {% endif %}
                 </div>
-                <div class="mdl-tabs__panel is-active" id="endorsements-panel"></div>
+                <div class="mdl-tabs__panel is-active" id="badge-panel">
+                    <div id="card" class="bronze-badge">
+                        <svg class="badge" viewBox="0 0 267.3 427.3">
+                            <defs>
+                                <!-- Gold Card -->
+                                <!-- <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
+                                    <stop offset="0%" style="stop-color:#fff176;" />
+                                    <stop offset="50%" style="stop-color:#fdd835;" />
+                                    <stop offset="50%" style="stop-color:#fff;" />
+                                    <stop offset="50.5%" style="stop-color:#fff;" />
+                                    <stop offset="50.5%" style="stop-color:#fff176;" />
+                                    <stop offset="100%" style="stop-color:#fff176;" />
+                                </linearGradient> -->
+                                <!-- Silver Card -->
+                                <!-- <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
+                                    <stop offset="0%" style="stop-color:#e0e0e0;" />
+                                    <stop offset="50%" style="stop-color:#9e9e9e;" />
+                                    <stop offset="50%" style="stop-color:#fff;" />
+                                    <stop offset="50.5%" style="stop-color:#fff;" />
+                                    <stop offset="50.5%" style="stop-color:#e0e0e0;" />
+                                    <stop offset="100%" style="stop-color:#e0e0e0;" />
+                                </linearGradient> -->
+                                <!-- Bronze Card -->
+                                <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
+                                    <stop offset="0%" style="stop-color:#8d6e63;" />
+                                    <stop offset="50%" style="stop-color:#6d4c41;" />
+                                    <stop offset="50%" style="stop-color:#fff;" />
+                                    <stop offset="50.5%" style="stop-color:#fff;" />
+                                    <stop offset="50.5%" style="stop-color:#8d6e63;" />
+                                    <stop offset="100%" style="stop-color:#8d6e63;" />
+                                </linearGradient>
+                            </defs>
+                            <path fill="url(#gradient)"
+                                d="M265.3 53.9a33.3 33.3 0 0 1-17.8-5.5 32 32 0 0 1-13.7-22.9c-.2-1.1-.4-2.3-.4-3.4 0-1.3-1-1.5-1.8-1.9a163 163 0 0 0-31-11.6A257.3 257.3 0 0 0 133.7 0a254.9 254.9 0 0 0-67.1 8.7 170 170 0 0 0-31 11.6c-.8.4-1.8.6-1.8 1.9 0 1.1-.2 2.3-.4 3.4a32.4 32.4 0 0 1-13.7 22.9A33.8 33.8 0 0 1 2 53.9c-1.5.1-2.1.4-2 2v293.9c0 3.3 0 6.6.4 9.9a22 22 0 0 0 7.9 14.4c3.8 3.2 8.3 5.3 13 6.8 12.4 3.9 24.8 7.5 37.2 11.5a388.7 388.7 0 0 1 50 19.4 88.7 88.7 0 0 1 25 15.5v.1-.1c7.2-7 16.1-11.3 25-15.5a427 427 0 0 1 50-19.4l37.2-11.5c4.7-1.5 9.1-3.5 13-6.8 4.5-3.8 7.2-8.5 7.9-14.4.4-3.3.4-6.6.4-9.9V231.6 60.5v-4.6c.4-1.6-.3-1.9-1.7-2z" />
+                        </svg>
+                        {% if not request.user.is_brand %}
+                            {% if request.user.get_profile_picture %}
+                            <img class="badge-profile-picture" src="{{ request.user.get_profile_picture.url }}" />
+                            {% else %}
+                            <i class="material-icons badge-placeholder-profile-picture">account_circle</i>
+                            {% endif %}
+                        {% else %}
+                            {% if influencer.user.get_profile_picture %}
+                            <img class="badge-profile-picture" src="{{ influencer.user.get_profile_picture.url }}" />
+                            {% else %}
+                            <i class="material-icons badge-placeholder-profile-picture">account_circle</i>
+                            {% endif %}
+                        {% endif %}
+                        <div class="badge-followers">
+                            {{ fb_permissions.ig_follower_count }}<br /><span>FOLLOWERS</span>
+                        </div>
+                        <img class="badge-verified-gif" src="{% static 'verified.gif' %}" alt="verified" />
+                        <div class="badge-instagram">
+                            {{ fb_permissions.ig_username }}
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -115,8 +173,8 @@
     {% endif %}
 
     {% for endorsement in endorsements %}
-        var link = "{{ endorsement.media_embed_url }}";
-        $("#endorsements-panel").append(`
+    var link = "{{ endorsement.media_embed_url }}";
+    $("#endorsements-panel").append(`
             <div class="post-container" id="post-container-{{ forloop.counter }}">
                 <div class="loader-container">
                     <div class="spinner-holder">
@@ -126,12 +184,12 @@
                 <hr class="post-separator" />
             </div>
         `);
-        $.ajax({
-            url: `https://api.instagram.com/oembed?url=${link}`,
-            async: true,
-            success: function (result) {
-                $("#post-container-{{ forloop.counter }} .loader-container").remove();
-                $("#post-container-{{ forloop.counter }}").prepend(`
+    $.ajax({
+        url: `https://api.instagram.com/oembed?url=${link}`,
+        async: true,
+        success: function (result) {
+            $("#post-container-{{ forloop.counter }} .loader-container").remove();
+            $("#post-container-{{ forloop.counter }}").prepend(`
                     <div class="mdl-grid">
                         <div class="mdl-cell mdl-cell--1-col brand-name">
                             {% if endorsement.campaign.brand.user.get_profile_picture %}
@@ -154,13 +212,13 @@
                     </div>
                     ${result['html']}
                 `);
-            }
-        });
-        {% if forloop.last %}
-            $("div.post-container:last-child hr").remove();
-        {% endif %}
+        }
+    });
+    {% if forloop.last %}
+    $("div.post-container:last-child hr").remove();
+    {% endif %}
     {% empty %}
-        $("#endorsements-panel").append(`
+    $("#endorsements-panel").append(`
             <div class="no-posts">
                 <div>
                     <i class="material-icons">hourglass_empty</i><br />
@@ -246,6 +304,7 @@
 
     .mdl-tabs__panel {
         background-color: #EEEEEE;
+        min-height: 100%;
         border-radius: 5px;
         min-height: 40vh;
         padding: 2vh 0vw;
@@ -331,83 +390,85 @@
         max-width: 1.5vw;
     }
 
-    iframe {
-        margin: auto !important;
-        border: 2px solid #161A1D !important;
-        margin-top: 2vh !important;
-    }
-
-    .post-container {
-        font-size: 1.5em;
-        font-weight: 300;
-    }
-
-    .post-container .loader-container {
-        min-height: 40vh;
+    #badge-panel {
         display: flex;
         align-items: center;
         justify-content: center;
+        background-color: transparent;
     }
 
-    .post-container .mdl-cell {
-        display: flex;
-        align-items: center;
-        line-height: 1;
-    }
-
-    .post-container i {
-        font-size: 1.5em;
-    }
-
-    .post-container .brand-picture-display {
-        width: 1em;
-        border-radius: 50%;
-    }
-
-    .post-container .mdl-grid {
-        width: 80%;
-        margin-top: 2vh;
-    }
-
-    .brand-name {
-        font-size: 1.5em;
-        font-weight: 300;
-    }
-
-    .brand-name i {
-        font-size: 1.5em;
-    }
-
-    hr {
-        width: 100%;
-        margin-top: 1vh;
-        margin-bottom: 1vh;
-    }
-
-    .post-separator {
-        border-color: #161A1D;
+    #card {
+        position: relative;
         margin-top: 5vh;
-        border-width: 8px;
     }
 
-    .no-posts {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        width: 100%;
-        height: 100%;
-        font-size: 1.5em;
+    #card svg.badge {
+        height: 55vh;
+    }
+
+    .badge-profile-picture {
         position: absolute;
+        width: 10vw;
+        top: 25%;
+        left: 50%;
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+        border: 1px solid #161A1D;
     }
 
-    .no-posts i {
-        font-size: 1.5em;
-        margin-bottom: 2vh;
+    .badge-placeholder-profile-picture {
+        position: absolute;
+        font-size: 10vw;
+        top: 25%;
+        left: 50%;
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
     }
 
-    .mdl-spinner__layer {
-        border-color: #161A1D !important;
+    .badge-followers {
+        position: absolute;
+        transform: translate(-50%, -50%);
+        font-size: 2em;
+        top: 75%;
+        left: 25%;
+        width: fit-content;
+        text-align: center;
+    }
+
+    .badge-followers span {
+        font-size: 0.5em;
+    }
+
+    .gold-badge {
+        color: #725b16;
+    }
+
+    .silver-badge {
+        color: #616161;
+    }
+
+    .bronze-badge {
+        color: #d7ccc8;
+    }
+
+    .badge-verified-gif {
+        width: 5vw;
+        position: absolute;
+        top: 75%;
+        left: 75%;
+        transform: translate(-50%, -50%);
+    }
+
+    .badge-instagram {
+        position: absolute;
+        top: 57%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 2em;
+        width: fit-content;
+        overflow-wrap: anywhere;
+        text-align: center;
+        line-height: 1;
     }
 </style>
 {% endblock %}
